flux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clipedia-svc
  namespace: app-clipedia
spec:
  selector:
    app: clipedia
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
